--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass": "node-sass --recursive --output dist --output-style expanded --indent-width 2 --source-map true --source-map-contents src",
+    "sass:watch": "node-sass --watch --recursive --output dist --output-style expanded --indent-width 2 --source-map true --source-map-contents src"
   },
   "browserslist": [
     ">0.2%",
