raw lib and docs

--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
-  "name": "hucssley-utility-class-library",
-  "version": "1.0.0",
+  "name": "hucssley",
+  "version": "0.1.0",
   "description": "",
   "keywords": [],
-  "main": "src/index.js",
+  "main": "src/_index.scss",
   "dependencies": {
     "node-sass": "4.10.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-scripts": "2.0.3"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
     "sass": "node-sass --recursive --output dist --output-style expanded --indent-width 2 --source-map true --source-map-contents src",
     "sass:watch": "node-sass --watch --recursive --output dist --output-style expanded --indent-width 2 --source-map true --source-map-contents src"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
