--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "dependencies": {},
   "devDependencies": {
     "doctoc": "^1.4.0",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "stylelint": "^13.0.0",
+    "stylelint-config-standard": "^19.0.0"
   },
   "scripts": {
+    "lint": "stylelint \"src/**/*.scss\"",
     "tocs": "doctoc . --github"
   }
 }
