--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {},
   "devDependencies": {
     "doctoc": "^1.4.0",
-    "node-sass": "^4.14.1",
     "stylelint": "^13.0.0",
     "stylelint-config-standard": "^19.0.0"
+  },
+  "peerDependencies": {
+    "sass": "1.x"
   },
   "scripts": {
     "lint": "stylelint \"src/**/*.scss\"",
