--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = false
 
-[*.scss]
+[*.{js,scss}]
 indent_style = space
 indent_size = 2
 end_of_line = lf
