--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hucssley",
+  "name": "@hireupau/hucssley",
   "version": "0.1.0",
   "description": "",
   "keywords": [],
@@ -16,5 +16,6 @@
   "scripts": {
     "lint": "stylelint \"src/**/*.scss\"",
     "tocs": "doctoc . --github"
-  }
+  }, 
+  "files":["src/**"]
 }
