--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "src/_index.scss",
+  "main": "dist/index.css",
+  "scripts": {
+    "build": "sass src/_index.scss dist/index.css --style compressed",
+    "lint": "stylelint \"src/**/*.scss\"",
+    "tocs": "doctoc . --github"
+  },
   "devDependencies": {
     "doctoc": "^2.2.0",
+    "sass": "^1.69.5",
     "stylelint": "^13.0.0",
     "stylelint-config-standard": "^19.0.0"
   },
-  "peerDependencies": {
-    "sass": "1.x"
-  },
-  "scripts": {
-    "lint": "stylelint \"src/**/*.scss\"",
-    "tocs": "doctoc . --github"
-  }, 
-  "files":["src/**"]
+  "files": [
+    "src/**"
+  ]
 }
