--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hireupau/hucssley",
-  "version": "1.0.1",
+  "version": "1.0.2-sass.0",
   "description": "",
   "keywords": [],
   "main": "dist/index.css",
